# Compton-PET

./: CMakeLists.txt  PET.cc  init_vis.mac
GateFunc/include/: GateApplicationMgr.hh  GateBackToBack.hh  GateClock.hh  GateCoincidencePulse.hh  GateConstants.hh  GatePulse.hh  GatePulseCollection.hh  GateSourceMgr.hh  GateVSource.hh
GateFunc/src/: GateApplicationMgr.cc  GateBackToBack.cc  GateClock.cc  GatePulse.cc  GatePulseCollection.cc  GateSourceMgr.cc  GateVSource.cc
include/: PETActionInitialization.hh  PETDetectorConstruction.hh  PETDetectorSD.hh  PETFileWriter.hh  PETPrimaryGeneratorAction.hh  PETRun.hh  PETRunAction.hh  PETSteppingAction.hh  PETTrackingAction.hh
src/: PETActionInitialization.cc  PETDetectorConstruction.cc  PETDetectorSD.cc  PETFileWriter.cc  PETParallelWorld.cc  PETPhysicsList.cc  PETPrimaryGeneratorAction.cc  PETRun.cc  PETRunAction.cc  PETSteppingAction.cc  PETTrackingAction.cc  PhysListEmPolarized.cc
